--- a/api/letter_templates/templates/letter_templates/refusal.html
+++ b/api/letter_templates/templates/letter_templates/refusal.html
@@ -9,8 +9,8 @@
     </tr>
     {% for refused in goods.refuse %}
     <tr>
-      <td>{{ refused.name }}</td>
-      <td>{{ refused.description }}</td>
+      <td>{{ refused.good.name }}</td>
+      <td>{{ refused.good.description }}</td>
       <td>
         {% for denial_reason in refused.denial_reasons %}
         Criterion {{ denial_reason.id }}: {{ denial_reason.description }}<br>
