--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -371,7 +371,7 @@
         </td>
       </tr>
       <tr>
-          <td class="border-black" colspan="12">
+          <td id="terms-and-conditions-table-last-row" colspan="12">
               {% if goods.approve|remove_duplicate_provisos|length %}
                 <div class="terms-and-conditions-heading">Additional conditions</div>
                 {% for proviso in goods.approve|remove_duplicate_provisos %}
@@ -380,64 +380,81 @@
                   </div>
                 {% endfor %}
               {% endif %}
+          </td>
+      </tr>
+    </table>
 
-              <div class="terms-and-conditions-heading">Authorisation</div>
-              <div class="terms-and-conditions-paragraph">
-                  The Secretary of State authorises the person named in box 1 of this licence ("the licensee") to export or transfer the goods, software
-                  and/or technology described in box 14 ("the listed items") to the person named in box 5, before the end of the date shown in box 3,
-                  subject to the conditions attached or specified in this licence as set out below.
-              </div>
-              {% if not goods.approve|licence_products_covered_by_firearms_regulations %}
-                <div class="terms-and-conditions-paragraph">
-                  Authorisation of the goods, software and/or technology has been granted under Article 26 of the Export Control Order 2008, as amended.
-                </div>
-              {% endif %}
-              <div class="terms-and-conditions-paragraph">
-                This licence does not permit any activity prohibited by financial sanctions. Where activity is prohibited by multiple types of sanctions, 
-                more than one licence may be required. Details of those designated under the regulations made under The Sanctions and Anti-Money Laundering Act 2018, 
-                can be found at: https://www.gov.uk/government/publications/the-uk-sanctions-list. UK sanctions evolve regularly, and it is the responsibility 
-                of the exporter to ensure that each export of goods under this licence is compliant with all relevant sanctions restrictions.
-              </div>
-              {% if goods.approve|licence_products_covered_by_firearms_regulations %}
-                <div class="terms-and-conditions-paragraph">
-                  If exporting from Great Britain, the authorisation for the goods against control entry 'FR AI' has been granted under Article 4 of Regulation (EU) No 258/2012. 
-                  If exporting from Northern Ireland, the authorisation for the goods against control entry 'FR AI' has been granted under Article 4 of Regulation (EU) No 258/2012 
-                  as it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal agreement.
-                </div>
-              {% endif %}
-			  <div class="terms-and-conditions-heading">Conditions</div>
-			  <div class="terms-and-conditions-paragraph">
-          1. For exports to a destination outside the United Kingdom, the licensee must submit a customs declaration prior to export, quoting
-           the number of this licence to the proper officer of HM Revenue and Customs when the listed items are presented to that officer 
-           for export or must comply with such alternative arrangements as are agreed with that officer, unless the export falls within condition 2 below. 
-			  </div>
-			  <div class="terms-and-conditions-paragraph">
-          2. For exports from Northern Ireland to the customs territory of the European Union, for goods on the UK Military List, or dual-use items listed in
-           Annex IV to Council Regulation (EC) No 428/2009 as it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal 
-           agreement, or goods within the scope of Directive 91/477/EEC or goods that could be used for torture or capital punishment listed in Regulation (EU) 2019/125 as 
-           it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal agreement, where no pre export customs declaration 
-           is required, the licensee must quote the number of this licence to the proper officer of HM Revenue and Customs* at least three working days before the date of 
-           the proposed export identifying a location where the listed items will be capable of inspection at any time during those three days, or shall comply with such 
-           alternative arrangements as are agreed with an officer of HM Revenue and Customs. * Notifications should be sent to it.audit.south.district@hmrc.gov.uk.
-			  </div>
-			  <div class="terms-and-conditions-paragraph">
-          3.The licensee must:
-        </div>
+    <div class="terms-and-conditions-paragraph-div">
+      <div class="terms-and-conditions-heading">Authorisation</div>
+      <div class="terms-and-conditions-paragraph">
+          The Secretary of State authorises the person named in box 1 of this licence ("the licensee") to export or transfer the goods, software
+          and/or technology described in box 14 ("the listed items") to the person named in box 5, before the end of the date shown in box 3,
+          subject to the conditions attached or specified in this licence as set out below.
+      </div>
+      {% if not goods.approve|licence_products_covered_by_firearms_regulations %}
         <div class="terms-and-conditions-paragraph">
-          i. maintain records of all transactions carried out under this licence,
+          Authorisation of the goods, software and/or technology has been granted under Article 26 of the Export Control Order 2008, as amended.
         </div>
+      {% endif %}
+      <div class="terms-and-conditions-paragraph">
+        This licence does not permit any activity prohibited by financial sanctions. Where activity is prohibited by multiple types of sanctions, 
+        more than one licence may be required. Details of those designated under the regulations made under The Sanctions and Anti-Money Laundering Act 2018, 
+        can be found at: https://www.gov.uk/government/publications/the-uk-sanctions-list. UK sanctions evolve regularly, and it is the responsibility 
+        of the exporter to ensure that each export of goods under this licence is compliant with all relevant sanctions restrictions.
+      </div>
+      {% if goods.approve|licence_products_covered_by_firearms_regulations %}
         <div class="terms-and-conditions-paragraph">
-          ii. present a copy of these records each time the licence is presented to HM Revenue & Customs,
+          If exporting from Great Britain, the authorisation for the goods against control entry 'FR AI' has been granted under Article 4 of Regulation (EU) No 258/2012. 
+          If exporting from Northern Ireland, the authorisation for the goods against control entry 'FR AI' has been granted under Article 4 of Regulation (EU) No 258/2012 
+          as it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal agreement.
         </div>
-        <div class="terms-and-conditions-paragraph">
-          iii. permit these records to be inspected and copied by any person authorised by the Secretary of State or the Commissioners, and
-        </div>
-        <div class="terms-and-conditions-paragraph">
-            iv. inform the Export Control Joint ("ECJU") when the licence becomes exhausted.
-        </div>
+      {% endif %}
+    </div>
 
+    <div class="terms-and-conditions-paragraph-div">
+      <div class="terms-and-conditions-heading">Conditions</div>
+      <div class="terms-and-conditions-paragraph">
+        1. For exports to a destination outside the United Kingdom, the licensee must submit a customs declaration prior to export, quoting
+         the number of this licence to the proper officer of HM Revenue and Customs when the listed items are presented to that officer 
+         for export or must comply with such alternative arrangements as are agreed with that officer, unless the export falls within condition 2 below. 
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        2. For exports from Northern Ireland to the customs territory of the European Union, for goods on the UK Military List, or dual-use items listed in
+         Annex IV to Council Regulation (EC) No 428/2009 as it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal 
+         agreement, or goods within the scope of Directive 91/477/EEC or goods that could be used for torture or capital punishment listed in Regulation (EU) 2019/125 as 
+         it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal agreement, where no pre export customs declaration 
+         is required, the licensee must quote the number of this licence to the proper officer of HM Revenue and Customs* at least three working days before the date of 
+         the proposed export identifying a location where the listed items will be capable of inspection at any time during those three days, or shall comply with such 
+         alternative arrangements as are agreed with an officer of HM Revenue and Customs. * Notifications should be sent to it.audit.south.district@hmrc.gov.uk.
+      </div>
+    </div>
+
+    <div class="terms-and-conditions-paragraph-div">
+      <div class="terms-and-conditions-paragraph">
+        3.The licensee must:
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        i. maintain records of all transactions carried out under this licence,
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        ii. present a copy of these records each time the licence is presented to HM Revenue & Customs,
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        iii. permit these records to be inspected and copied by any person authorised by the Secretary of State or the Commissioners, and
+      </div>
+      <div class="terms-and-conditions-paragraph">
+          iv. inform the Export Control Joint ("ECJU") when the licence becomes exhausted.
+      </div>
+    </div>
+
+    {% if details.export_type != "temporary" %}
+    <div class="terms-and-conditions-paragraph-last-div">
+    {% else %}
+    <div class="terms-and-conditions-paragraph-div">
+    {% endif %}
         <div class="terms-and-conditions-paragraph">
           4. This condition applies if listed items (being software or technology) have been transferred. The licensee must keep records that contain sufficient detail to allow the following to be identified:
+        </div>
 
         <div class="terms-and-conditions-paragraph">
           a. A description of the listed items that have been transferred;
@@ -454,43 +471,45 @@
         <div class="terms-and-conditions-paragraph">
             For listed items covered by Regulation (EU) 258/2012 and Regulation (EU) 258/2012 as it has effect in Northern Ireland by virtue of the Protocol on Ireland/Northern Ireland in the EU withdrawal agreement (retained under the European Union (Withdrawal) Act 2018), marking details and serial numbers must form part of the supporting commercial documentation accompanying the export.
         </div>
+    </div>
 
-        {% if details.export_type == "temporary" %}
-          <div class="terms-and-conditions-heading">For temporary SIELs</div>
-          <div class="terms-and-conditions-paragraph">
-            5. The licensee may only export the listed items if he has obtained such permissions from the authorities of the country of destination as are necessary to enable the listed items to be returned to the country from which he is exporting them (the country of origin) before the end of the date given in [box 3] of this licence the expiry date).
-          </div>
+    {% if details.export_type == "temporary" %}
+    <div class="terms-and-conditions-paragraph-last-div">
+      <div class="terms-and-conditions-heading">For temporary SIELs</div>
+      <div class="terms-and-conditions-paragraph">
+        5. The licensee may only export the listed items if he has obtained such permissions from the authorities of the country of destination as are necessary to enable the listed items to be returned to the country from which he is exporting them (the country of origin) before the end of the date given in [box 3] of this licence the expiry date).
+      </div>
 
-          <div class="terms-and-conditions-paragraph">
-            6. The licensee must make and maintain all necessary arrangements (including all necessary security arrangements) and must at all times retain sufficient control of the listed items to ensure that they are safely returned to the country of origin before the end of the expiry date; the licensee must not transfer to any person ownership of the listed items or any interest in them or take any action which may have the result of impeding or diminishing his power to ensure their safe return to the country of origin before the end of the expiry date.
-          </div>
+      <div class="terms-and-conditions-paragraph">
+        6. The licensee must make and maintain all necessary arrangements (including all necessary security arrangements) and must at all times retain sufficient control of the listed items to ensure that they are safely returned to the country of origin before the end of the expiry date; the licensee must not transfer to any person ownership of the listed items or any interest in them or take any action which may have the result of impeding or diminishing his power to ensure their safe return to the country of origin before the end of the expiry date.
+      </div>
 
-          <div class="terms-and-conditions-paragraph">
-            7. The licensee must ensure that the listed items only pass through a country not specified in this licence where this is necessary for them to reach their final destination and/or to return from that destination to the country of origin.
-          </div>
+      <div class="terms-and-conditions-paragraph">
+        7. The licensee must ensure that the listed items only pass through a country not specified in this licence where this is necessary for them to reach their final destination and/or to return from that destination to the country of origin.
+      </div>
 
-          <div class="terms-and-conditions-paragraph">
-            8. The ECO shall be kept fully and accurately informed of:
-          </div>
-            <div class="terms-and-conditions-paragraph">
-              a. Each place where the listed items are kept or pass through after export; and
-            </div>
-            <div class="terms-and-conditions-paragraph">
-              b. Any occurrence which may result in the listed items or any part of them not being returned to the country of origin before the end of the expiry date.
-            </div>
-          <div class="terms-and-conditions-paragraph">
-            9. As soon as the listed items have been returned to the country of origin, the licensee shall send to ECO (at exportcontrol.help@trade.gov.uk) notice of their return together with any documentary evidence thereof.
-          </div>
-          <div class="terms-and-conditions-paragraph">
-            10. The licensee shall ensure that the listed items will not be used for any purpose other than that declared in the application form for this licence.
-          </div>
-          <div class="terms-and-conditions-paragraph">
-            Note: The granting of this temporary export licence sets no precedent in respect of any subsequent applications to permanently export or transfer similar goods, software and/or technology.
-          </div>
-        {% endif %}
-        </td>
-      </tr>
-    </table>
+      <div class="terms-and-conditions-paragraph">
+        8. The ECO shall be kept fully and accurately informed of:
+      </div>
+        <div class="terms-and-conditions-paragraph">
+          a. Each place where the listed items are kept or pass through after export; and
+        </div>
+        <div class="terms-and-conditions-paragraph">
+          b. Any occurrence which may result in the listed items or any part of them not being returned to the country of origin before the end of the expiry date.
+        </div>
+      <div class="terms-and-conditions-paragraph">
+        9. As soon as the listed items have been returned to the country of origin, the licensee shall send to ECO (at exportcontrol.help@trade.gov.uk) notice of their return together with any documentary evidence thereof.
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        10. The licensee shall ensure that the listed items will not be used for any purpose other than that declared in the application form for this licence.
+      </div>
+      <div class="terms-and-conditions-paragraph">
+        Note: The granting of this temporary export licence sets no precedent in respect of any subsequent applications to permanently export or transfer similar goods, software and/or technology.
+      </div>
+    </div>
+    {% endif %}
+    <br>
+
 
 	<p style="page-break-before: always">
     <table>
