Fix formatting and misc issues in NLR and Refusal templates
- User added content is not getting substituted
- formatting issue in NLR template, logo too big and addresses not aligned
- good name, description, part numbers not substituted
- Remove SPIRE Doc Ref field from template

--- a/api/letter_templates/templates/letter_templates/ecju_base.html
+++ b/api/letter_templates/templates/letter_templates/ecju_base.html
@@ -4,7 +4,6 @@
   <p id="references">
     Our Ref: {{ case_reference }}<br>
     Your Ref: {{ details.user_reference }}<br>
-    SPIRE Doc Ref:PREVIEW
   </p>
   <img src="{% static 'images/dit.png' %}">
 
@@ -41,7 +40,7 @@
   </div>
 
   <div class="border-black padding page-break-after" id="paragraph_content">
-      $USER_CONTENT$
+    {{ user_content }}
   </div>
 
   <h1>Schedule of Entities Assessed</h1>
