--- a/api/letter_templates/templates/letter_templates/nlr.html
+++ b/api/letter_templates/templates/letter_templates/nlr.html
@@ -82,9 +82,9 @@
       {% for good in goods.no_licence_required %}
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">{{ forloop.counter }}</td>
-          <td class="govuk-table__cell">{{ good.name }}</td>
-          <td class="govuk-table__cell">{{ good.description }}</td>
-          <td class="govuk-table__cell">{{ good.part_number }}</td>
+          <td class="govuk-table__cell">{{ good.good.name }}</td>
+          <td class="govuk-table__cell">{{ good.good.description }}</td>
+          <td class="govuk-table__cell">{{ good.good.part_number }}</td>
         </tr>
       {% endfor %}
     </tbody>
