--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -315,7 +315,7 @@
           {% endwith %}
         {% endfor %}
     <tr>
-        <td class="border-black" colspan="12" style="height: 200px" id="paragraph_content">$USER_CONTENT$</td>
+        <td class="border-black" colspan="12" style="height: 200px" id="paragraph_content">{{ user_content }}</td>
     </tr>
     </table>
 
