--- a/api/letter_templates/templates/letter_templates/case_context_test.html
+++ b/api/letter_templates/templates/letter_templates/case_context_test.html
@@ -1,5 +1,7 @@
 {% load custom_tags %}
 
+{{ css|safe }}
+
 <div class="document">
 	{# Layout to produce test document containing all available case context data. #}
 	{# NOTE: paths used in this layout are intentionally the exact paths used in production documents #}
