--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -4,7 +4,7 @@
 
 <div class="document">
     <h1>Standard Individual Export Licence</h1>
-    <img src="data:image/png;base64,{{ image_data }}" alt="Department for International Trade logo" />
+    <img id="dit-logo" src="data:image/png;base64,{{ image_data }}" alt="Department for International Trade logo" />
 
     <table id="first-page-table" class="fixed-layout">
       <!--
